--- a/src/styles/SearchContainer.sass
+++ b/src/styles/SearchContainer.sass
@@ -1,8 +1,43 @@
+.header
+    padding: 20px
+    background-color: black
+    color: white
+    .search-header
+        display: inline-block
+
+.logo
+    font-weight: bold
+    background-image: -webkit-radial-gradient(#f2f2f2, #f9ec75, #f3ce00)
+    color: black
+    padding: 6px
+    border-radius: 3px
+    vertical-align: middle
+
+.search-input
+    margin-left: 5px
+    border: none
+    box-shadow: 1px 1px 1px rgba(0,0,0,0.4) inset
+    height: 20px
+    padding: 5px 8px
+    font-family: Verdana, Arial, sans-serif
+    &.title
+        border-radius: 3px 0 0 3px
+        width: 420px
+    &.year
+        width: 100px
+
+
+
 .search-button
     display: inline-block
     width: 30px
     height: 30px
+    margin-left: 5px
+    vertical-align: middle
+    border-radius: 0 3px 3px 0
     background-image: -webkit-linear-gradient(top, rgb(242, 242, 242) 0%, rgb(249, 236, 117) 20%, rgb(243, 206, 0) 70%)
+    text-align: center
+    color: black
     cursor: pointer
     &:hover
         background-color: rgb(243, 206, 0)
