Catching 'enter' events and css fine tuning

--- a/src/styles/Globals.sass
+++ b/src/styles/Globals.sass
@@ -1,13 +1,13 @@
 
 body
     background: -webkit-linear-gradient(top, #b3b3b0 0%, #e3e2dd 500px)
-    background: linear-gradient(top, #b3b3b0 0%,#e3e2dd 500px)
+    background: linear-gradient(to bottom, #b3b3b0 0%,#e3e2dd 500px)
     background-color: #e3e2dd
     background-repeat: no-repeat
     font-family: Verdana, Arial, sans-serif
 
 .container
     width: 1008px
-    min-height: 600px
+    min-height: 100vh
     margin: auto
     background-color: #fff
