--- a/src/styles/SearchContainer.sass
+++ b/src/styles/SearchContainer.sass
@@ -4,7 +4,6 @@
     color: white
     .search-header
         display: inline-block
-
 .logo
     font-weight: bold
     background-image: -webkit-radial-gradient(#f2f2f2, #f9ec75, #f3ce00)
@@ -12,7 +11,6 @@
     padding: 6px
     border-radius: 3px
     vertical-align: middle
-
 .search-input
     margin-left: 5px
     border: none
@@ -25,9 +23,8 @@
         width: 420px
     &.year
         width: 100px
-
-
-
+.invisible-button
+    visibility: hidden
 .search-button
     display: inline-block
     width: 30px
@@ -42,10 +39,29 @@
     &:hover
         background-color: rgb(243, 206, 0)
         background-image: none
-
 .fa-search
     line-height: 30px
-
-.movie-thumb
-    width: 32px
-    height: 44px
+.user-message-title
+    padding: 20px
+.results
+    padding: 20px
+    color: #A58500
+.movie
+    display: flex
+    border-bottom: 1px solid #E8E8E8
+    padding: 10px 0
+    .movie-thumb
+        width: 32px
+        height: 44px
+        background: url(http://ia.media-imdb.com/images/G/01/imdb/images/nopicture/32x44/film-3119741174._CB514893333_.png) no-repeat
+        img
+            width: 32px
+            height: 44px
+        img[src=""]
+            display: none
+    .title
+        margin-left: 10px
+        align-self: center
+        text-decoration: none
+        font-size: 14px
+        color: #136CB2
